vemo-app/main/default/objects/PaymentAllocation__c/PaymentAllocation__c.object-meta.xml
<CustomObject>
    <label>Payment Allocation</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Payment Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>