vemo-app/main/default/objects/PaymentAllocation__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Agreement related to this Payment Allocation.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>StudentProgram__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>