vemo-app/main/default/objects/PaymentAllocation__c/fields/AllocationGUID__c.field-meta.xml
<CustomField>
    <fullName>AllocationGUID__c</fullName>
    <description>System ID used for upsert DML matching</description>
    <externalId>true</externalId>
    <label>AllocationGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>