vemo-app/main/default/objects/PaymentAllocation__c/fields/AllocationType__c.field-meta.xml
<CustomField>
    <fullName>AllocationType__c</fullName>
    <inlineHelpText>Reconciliation, Monthly Amount, or Fee.</inlineHelpText>
    <label>Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DebitType</valueSetName>
    </valueSet>
</CustomField>