vemo-app/main/default/objects/PaymentAllocation__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <inlineHelpText>Details of this Payment Allocation (free-text field).</inlineHelpText>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>