vemo-app/main/default/objects/PaymentAllocation__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Fee related to this Payment Allocation.</inlineHelpText>
    <label>Fee</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>