vemo-app/main/default/objects/PaymentAllocation__c/fields/PaymentInstruction__c.field-meta.xml
<CustomField>
    <fullName>PaymentInstruction__c</fullName>
    <inlineHelpText>The Payment Instruction related to this Payment Allocation.</inlineHelpText>
    <label>Payment Instruction</label>
    <referenceTo>PaymentInstruction__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>